syntax = "proto3";
package Services;

import "google/protobuf/empty.proto";

option csharp_namespace = "Connections.Services";

service ConnectionService{
	rpc Connect(LoginRequest) returns (ConnectionReply);
	rpc Disconnect(DisconnectRequest) returns (google.protobuf.Empty);
}

message LoginRequest{
	string nickName = 1;
}

message DisconnectRequest{
	string id = 1;
}

message ConnectionReply{
	string id = 1;
}